Add new diagrams; Minor corrections

--- a/Sources/Background/Nature_of_Light/Jones_Vectors.tex
+++ b/Sources/Background/Nature_of_Light/Jones_Vectors.tex
@@ -76,7 +76,7 @@ where $\psi$ is any angle in relation to the X axis.  Circular polarization is r
 \subsubsection{Optical Devices}
 Polarization can be naturally occurring, such as in the case of skylight, or it can be created by passing light through an optical device such as a linear polarizer or a quarter wave plate.  Jones vectors are useful for describing the polarization state of an EM wave, while Jones matrices describe nondepolarizing optical devices and the transformation of pure incident polarization states through them.
 
-A linear polarizer is a device that transmits linear polarization states for incident light beams that are aligned with their transmission axis (TA) of the polarizer [14].  For example, if horizontally polarized light is passed through a polarizer with a $TA = 90^{\circ}$, all of the incident light will be extinguished.  In practice all of the light is not completely extinguished and there are often spectral differences to the response of polarizers.
+A linear polarizer is a device that transmits linear polarization states for incident light beams that are aligned with their transmission axis (TA) of the polarizer \cite{polarizedlight}.  For example, if horizontally polarized light is passed through a polarizer with a $TA = 90^{\circ}$, all of the incident light will be extinguished.  In practice all of the light is not completely extinguished and there are often spectral differences to the response of polarizers.
 
 Since linear polarizers block light that is orthogonal to the TA, it can be shown that the general equation for a linear polarizer is such that
 %
