--- a/Sources/Background/Nature_of_Light/Nature_of_Light.tex
+++ b/Sources/Background/Nature_of_Light/Nature_of_Light.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{The Nature of Light and the Electromagnetic Spectrum}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-Light is fundamental to life.  In Maxwell’s’ theory on light he explained how electromagnetic phenomenon can be expressed in terms of waves [6].  These waves move at the speed of light.  The light that human eyes can detect is a small portion of the electromagnetic spectrum called ‘visible light’.
+Light is fundamental to life.  In Maxwell’s’ theory on light he explained how electromagnetic phenomenon can be expressed in terms of waves \cite{maxwell}.  These waves move at the speed of light.  The light that human eyes can detect is a small portion of the electromagnetic spectrum called ‘visible light’.
 %
 %CHECK [insert EM image here]
 \begin{figure}[!htb]
@@ -25,7 +25,7 @@ where $ \theta = \delta t-kz $ is the wave propagator that determines the freque
 
 When more than one sine wave is considered, as in the case of EM waves, an overall phase delay between the them is considered and represented as $ \tau=\delta_y-\delta_x $.
 
-Light can also be viewed as packets of energy known as photons.  The energy of photons is related to its frequency $v$ and a constant, known as Planck’s constant $h$ [9].
+Light can also be viewed as packets of energy known as photons.  The energy of photons is related to its frequency $v$ and a constant, known as Planck’s constant $h$ \cite{ecophysiology}.
 %
 \begin{align}
 	h=6.62e-34 [m^2 kg/s]\\
