--- a/Sources/Background/Nature_of_Light/Polarization_of_EM_Waves.tex
+++ b/Sources/Background/Nature_of_Light/Polarization_of_EM_Waves.tex
@@ -24,6 +24,7 @@ The $y$ component is then separated using known trigonometric identities and equ
 E_y (t)=E_{0y} (cos(\tau) cos(\delta)-sin(\tau)sin(\delta))
 \end{align}
 %
+[TODO show what delta equals here how delta y goes to just delta?]
 Dividing each equation by its intensity results in
 %
 \begin{align}
@@ -50,10 +51,10 @@ The factorization of this equation can be rearranged into the standard form of a
 \end{align}
 %
 And is graphed as
-%[TODO replace this image with one that has both parameters]
+%[CHECK replace this image with one that has both parameters]
 \begin{figure}[!htb]
     \begin{center}
-        \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Background/Nature_of_Light/polarization-ellipse-binary.png}}
+        \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Background/Nature_of_Light/polarization-ellipse-binary-v2.png}}
     \end{center}
     \caption{Polarization Ellipse}
     \label{fig:polarization}
@@ -67,7 +68,7 @@ Starting from the equation for the polarization ellipse, taking the time average
     \frac{E_x (t)^2}{E_{0x}^2} + \frac{E_y (t)^2}{E_{0y}^2} - \frac{2 E_x (t) E_y (t)}{E_{0x} E_{0y} } cos(\delta)=sin^2 (\delta)
 \end{align}
 %
-the time averages are calculated as [TODO Fix this equation]
+the time averages are calculated as [CHECK Fix this equation]
 %
 \begin{align}
     <E_x (t)^2> = lim_{T \rightarrow \infty} \int_{0}^{2\pi} E_{0x} cos(\tau)  d\tau=\frac{1}{2} E_{0x}^2
@@ -168,7 +169,7 @@ The Stokes parameters can be graphed on a unit sphere, known as the Poincare sph
     Eccentricity= \sqrt{1-Ellipticity^2}
 \end{align}
 %
-The ellipticity of the polarization ellipse varies from 0, for linearly polarized light, to 1 for purely circular polarization [7].
+The ellipticity of the polarization ellipse varies from 0, for linearly polarized light, to 1 for purely circular polarization \cite{chipman}.
 %
 For	graphical representation, Stokes vectors can be plotted on a 3-dimensional sphere known as the Poincare sphere. The sphere is only capable of showing the polarized portion of the EM wave.  Prior to normalization, if the EM wave is not fully polarized, the intensity of the polarized beam must be normalized in relation to the total beam intensity.
 %
