--- a/Sources/Background/Nature_of_Light/Scattering_Mechanisms.tex
+++ b/Sources/Background/Nature_of_Light/Scattering_Mechanisms.tex
@@ -8,7 +8,7 @@ Single scattering mechanisms create a portion of reflectance known as specular r
 
 Volume scattering occurs when light is absorbed by a material and is readmitted in all directions, including back towards the surface of the material.  They are denoted Type B photons.  Transmittance of this energy back into the first medium obeys the laws of Fresnel’s equations, although the indices of refraction are reversed.  This mechanism accounts for absorption and other higher level light matter interactions, not explained solely by Fresnel’s equations.
 
-Multiple scattering occurs when either Type A or Type B photons interact with the material surface more than once when either being reflected or re transmitted out of the material.  These are denoted Type C photons [15].  Figure 6 shows each type of interaction.
+Multiple scattering occurs when either Type A or Type B photons interact with the material surface more than once when either being reflected or re transmitted out of the material.  These are denoted Type C photons \cite{schott}.  Figure 6 shows each type of interaction.
 %
 \begin{figure}[!htb]
     \begin{center}
@@ -22,7 +22,7 @@ In general type A photons create specular highlights from surfaces that are smoo
 
 Surfaces that are perfectly smooth dielectrics are often considered to be purely specular reflectors of light.  Incident energy is transmitted in an idealized single ray of light from the surface.  Specular reflectors are single scattering mechanisms and result in purely polarized light due to the governance of Fresnel’s equations and are denoted as type A photons.
 
-In simple models, rough surfaces can be viewed as purely diffuse reflectors that scatter incident light equally in all directions.  Perfect diffuse surfaces are known as Lambertian surfaces.  It has been assumed that the diffuse portion of light is unpolarized due to random nature of internal reflections [25, 26]. Bidirectional Reflectance Distribution Functions (BRDF) have been created to model the variety of surface interactions in order to handle the non ideal case of rough surfaces. (TODO in its simplest form rotational symmetry is assumed around the point of incidence and the equation becomes)
+In simple models, rough surfaces can be viewed as purely diffuse reflectors that scatter incident light equally in all directions.  Perfect diffuse surfaces are known as Lambertian surfaces.  It has been assumed that the diffuse portion of light is unpolarized due to random nature of internal reflections [\cite{specularclass}, \cite{grant}]. Bidirectional Reflectance Distribution Functions (BRDF) have been created to model the variety of surface interactions in order to handle the non ideal case of rough surfaces. (TODO in its simplest form rotational symmetry is assumed around the point of incidence and the equation becomes)
 \begin{figure}[!htb]
     \begin{center}
         \makebox[\textwidth]{\includegraphics[scale=0.45]{/Sources/Background/Nature_of_Light/diffuse-specular.png}}
