--- a/Sources/Background/Texture_and_Tone/Texture_and_Tone.tex
+++ b/Sources/Background/Texture_and_Tone/Texture_and_Tone.tex
@@ -2,11 +2,11 @@
 \section{Texture and Tone}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-“When small image areas from black and white photographs are independently processed by a machine, then texture and tone are most important” [4].  Without tone there is no texture, as texture is created when there are certain frequencies of tonal change in an image [12].
+“When small image areas from black and white photographs are independently processed by a machine, then texture and tone are most important” \cite{haralick}.  Without tone there is no texture, as texture is created when there are certain frequencies of tonal change in an image \cite{remotesensing}.
 
 A surface texture is classified according to the scale at which the human eye can see.  It is import to determine the appropriate scale for a particular surface, when talking about its texture.  A surfaces ability to appear smooth or rough in an image, is determined by the spatial frequency distribution of grey level pixel intensities in a greyscale image and the various shades of grey tones.  The nature of light reflecting from surfaces of materials is also largely due to the how rough or smooth the surface is.  Imaging devices are able to pick up pixel by pixel surface interactions in their large field of view.  Cameras are able to detect multiple scattering mechanisms for analysis in material classification problems.
 
-Tone is related to texture and is the grey level gradients distributed across an image.  It is the “relative brightness or color of objects on an image” [12].  If an image has no differences in tone, then the texture and other features are indiscernible.
+Tone is related to texture and is the grey level gradients distributed across an image.  It is the “relative brightness or color of objects on an image” \cite{remotesensing}.  If an image has no differences in tone, then the texture and other features are indiscernible.
 
 When a pixel is considered as a single color receptor, it represents only tone.  The scaling of the window size to include more pixels allows for texture to become more prevalent.   Scale is important when considering texture since texture is defined in relation to our perception of a materials' surface.
 
