--- a/Sources/Conclusion/Conclusion.tex
+++ b/Sources/Conclusion/Conclusion.tex
@@ -25,7 +25,7 @@ Results for Red Oak have been provided in detail for this report as it provides 
 
 The relative water content of leaves is shown to be correlated with both its texture and polarization response when captured by a digital microscope behind a rotating linear polarizer.
 
-Further improvements to experiment design, plant health status control, image acquisition and segmentation should be taken to improve the results of regression.  Plants can be controlled at a finer level when grown by starting seeds from scratch in a controlled environment.  Inputs to each individual plant could be altered including various fertilizers and water amounts.  Paper chromatography methodologies,as discussed in [35] could be used for determining the various distribution of pigments throughout smaller subsections of the leaves.  By creating false images with polarization and texture information, smaller sections of leaves could be isolated and correlated with each feature.  Image acquisition could be improved by reducing the amount of undulations on a leafs surface, in order to reduce the amount of effects that arise from masking and shadowing.  Different light sources should be investigated to determine the consistency of our results.  Image segmentation may prove beneficial to isolating the effects of localized features.  Physiological indicators, such as pigment concentrations, in addition to relative water content should be investigated to further show health status and correlate the polarization response.
+Further improvements to experiment design, plant health status control, image acquisition and segmentation should be taken to improve the results of regression.  Plants can be controlled at a finer level when grown by starting seeds from scratch in a controlled environment.  Inputs to each individual plant could be altered including various fertilizers and water amounts.  Paper chromatography methodologies,as discussed in \cite{pigments} could be used for determining the various distribution of pigments throughout smaller subsections of the leaves.  By creating false images with polarization and texture information, smaller sections of leaves could be isolated and correlated with each feature.  Image acquisition could be improved by reducing the amount of undulations on a leafs surface, in order to reduce the amount of effects that arise from masking and shadowing.  Different light sources should be investigated to determine the consistency of our results.  Image segmentation may prove beneficial to isolating the effects of localized features.  Physiological indicators, such as pigment concentrations, in addition to relative water content should be investigated to further show health status and correlate the polarization response.
 
 In the area of polarization and texture modeling, examples could be given as to how various textures, such as sandpaper, glass, etc. are related to their polarization response in a simplistic model.
 
