--- a/Sources/Experimental_Design/Experimental_Design.tex
+++ b/Sources/Experimental_Design/Experimental_Design.tex
@@ -11,9 +11,9 @@
   \vspace{0.5cm}
 \end{center}
 
-[CHECK] In order to demonstrate the effectiveness of polarization and texture features with support vector machines for the purpose of classification and relative water content determination, experiments were devised, conducted and analyzed. These experiments was designed to investigate the linear polarizance vector of the Mueller matrix for various species of tree leaves in the diffuse and specular directions.  Leaves were investigated in different physiological states determined by both decomposition time and relative water content.  Classification and regression techniques were used to correlate the polarization and texture information from images acquired of various species of leaves.  Data for Red Oak, American Ash and Sugar Maple leaves was acquired for the purpose of classification.  Devils Ivy was observed in studies on relative water content.  
+[CHECK] In order to demonstrate the effectiveness of polarization and texture features with support vector machines for the purpose of classification and relative water content determination, experiments were devised, conducted and analyzed. These experiments was designed to investigate the linear polarizance vector of the Mueller matrix for various species of tree leaves in the diffuse and specular directions.  Leaves were investigated in different physiological states determined by both decomposition time and relative water content.  Classification and regression techniques were used to correlate the polarization and texture information from images acquired of various species of leaves.  Data for Red Oak, American Ash and Sugar Maple leaves was acquired for the purpose of classification.  Devils Ivy was observed in studies on relative water content.
 
-Specular reflections are well known to create highly polarized light [26,31]. The diffuse portion of reflection has been less investigated.  It has often been assumed that the diffuse portion is unpolarized due to multiple scattering and volume scattering caused by type B and C photons creating random orientations of light.  Recently the polarization of the diffuse component has been observed in studies [32, 33] for the purpose of determining the geometry of various surfaces.  In the experiments reported here, the diffuse portion was observed for indicators of physiological, chemical, and biological status for individual plant leaves. It was assumed that as the leaf surfaces decomposes or losses water content, the surface would become rougher as the epicuticle wax layer changed. The experiments presented here, attempt to demonstrate results that agree with previous outlined light leaf interactions in the specular direction, as well as extend the analysis for the diffuse direction.  The acquired polarization and texture data is processed for the purpose of determining the surface texture and internal scattering mechanisms for classification between various species, and investigation into the differences in these processes during decomposition and water stress conditions.
+Specular reflections are well known to create highly polarized light [\cite{grant},\cite{vanderbilt}]. The diffuse portion of reflection has been less investigated.  It has often been assumed that the diffuse portion is unpolarized due to multiple scattering and volume scattering caused by type B and C photons creating random orientations of light.  Recently the polarization of the diffuse component has been observed in studies [\cite{surface}, \cite{shapediffuse}] for the purpose of determining the geometry of various surfaces.  In the experiments reported here, the diffuse portion was observed for indicators of physiological, chemical, and biological status for individual plant leaves. It was assumed that as the leaf surfaces decomposes or losses water content, the surface would become rougher as the epicuticle wax layer changed. The experiments presented here, attempt to demonstrate results that agree with previous outlined light leaf interactions in the specular direction, as well as extend the analysis for the diffuse direction.  The acquired polarization and texture data is processed for the purpose of determining the surface texture and internal scattering mechanisms for classification between various species, and investigation into the differences in these processes during decomposition and water stress conditions.
 
 There are numerous challenges to practical applications of BRDF models due to the large amount of measurements required to classify an object's reflective polarization properties.  A digital microscope was utilized for the purpose of quantifying regions on leaves that include different surface structures such as veins, mold, undulations, cell walls, etc.
 
