--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -7,29 +7,29 @@
     \begin{small}
       “The motion of a pendulum has exerted a fascination for human minds since the first savage watched the swaying of the first tree branch. The smooth sinusoidal motion back and forth, seems to express some secret of the universe…
       Indeed, nature loves the sinusoid”.\\
-      \null\hfill\emph{Linear Circuits, Scott}
+      \null\hfill\emph{Linear Circuits, Scott\cite{linearcircuit}}
     \end{small}
   \end{minipage}
   \vspace{0.5cm}
 \end{center}
 
-\noindent The natural environment\cite{knuthwebsite} contains a finite amount of resources.  It provides a limiting principle to the uncontrolled, exponential capital growth of consumerism.  If ancient civilization describes itself as a political social animal, modern culture must append the term consumer. Consumption of these resources is occurring at an increasing rate, as the world’s population increases, putting a strain on the modern agricultural system.  In 1798 Thomas Malthus wrote in his “Essay on the Principal of Population” that the standard of living would eventually be undermined as population grows exponentially, and food supplies grow geometrically.  He predicted this would eventually lead to mass food shortages and famine.
+\noindent The natural environment contains a finite amount of resources.  It provides a limiting principle to the uncontrolled, exponential capital growth of consumerism.  If ancient civilization describes itself as a political social animal, modern culture must append the term consumer. Consumption of these resources is occurring at an increasing rate, as the world’s population increases, putting a strain on the modern agricultural system.  In 1798 Thomas Malthus wrote in his “Essay on the Principal of Population” that the standard of living would eventually be undermined as population grows exponentially, and food supplies grow geometrically.  He predicted this would eventually lead to mass food shortages and famine.
 
 Today precision agriculture attempts to reduce the number of inputs to a farm, while maximizing its outputs.  Its goal is the management of agricultural inputs on an individual plant basis.  Minimizing water and fertilizer inputs are of central importance to this problem.
 
 The areas of remote sensing, image processing, and machine learning have all been aided by advances in modern computing power.  The application of these disciplines to areas of precision agriculture are widespread.
 
-Remote sensing in particular has had a tremendous impact on precision agricultural as it opens up the possibility of large area surveying and field health assessment.  Recently satellite data has been made easily available to the public through hosting on Amazon Web Services S3 buckets.  They include data from Landsat 8, the Geostationary Operational Environmental Satellites (GOES), NASA Earth Exchange (NEX), and the National Agricultural Imagery Program (NAIP).  These datasets contain information on various spectral responses recorded by various satellites.  Some of the datasets also contain scenes captured through polarization filters oriented at various angles. These polarization images can be useful for deriving certain backscatter and volume scattering properties of the scene under investigation and have been utilized by [18, 21].
+Remote sensing in particular has had a tremendous impact on precision agricultural as it opens up the possibility of large area surveying and field health assessment.  Recently satellite data has been made easily available to the public through hosting on Amazon Web Services S3 buckets.  They include data from Landsat 8, the Geostationary Operational Environmental Satellites (GOES), NASA Earth Exchange (NEX), and the National Agricultural Imagery Program (NAIP).  These datasets contain information on various spectral responses recorded by various satellites.  Some of the datasets also contain scenes captured through polarization filters oriented at various angles. These polarization images can be useful for deriving certain backscatter and volume scattering properties of the scene under investigation and have been utilized by \cite{mississippi}, \cite{sarag}.
 
 [CHECK] When interpreting data from remotely sensed imagery of vegetation, it is important to understand the scattering mechanisms inherent to the various features found within a particular image.  This includes scattering from background objects such as soil, man made objects, canopies, etc. as well as target objects such as crops. Canopies are made up of individual leaves.  It is important to understand the scattering mechanisms that occur from each leaf in order to gain an increased insight into the larger effects evident in canopies. More precise models can then be created for the purpose of extrapolating micro level effects to the macro level.
 
 [CHECK] Furthermore, as more agricultural operations are moved indoors, information acquired from cameras monitoring these greenhouses can provide insights into the health and growth stages of various crops. Research into building greenhouses in space for the colonization of other planets, has always grown substantially as of late, with programs such as SpaceX looking into the possibility of placing a greenhouse on Mars.  This provides an opportunity for placing image sensors into confined growing areas for monitoring plants on a micro scale.
 
-Vegetation indices (VI) have been created for quantifying the health of land plants from remotely sensed data.  These indices rely on the spectral signatures exhibited by plants that vary with the state of a vegetation’s health [12].  It is possible that these ideas can be applied to smaller scale indoor scenarios as well.
+Vegetation indices (VI) have been created for quantifying the health of land plants from remotely sensed data.  These indices rely on the spectral signatures exhibited by plants that vary with the state of a vegetation’s health \cite{remotesensing}.  It is possible that these ideas can be applied to smaller scale indoor scenarios as well.
 
-Additional image processing can result in texture features being extracted from images for the purposes of segmentation and texture based classification.  It has been found that certain materials when captured from satellites and other airborne imaging devices, exhibit texture signatures that can be useful for these purposes [19].
+Additional image processing can result in texture features being extracted from images for the purposes of segmentation and texture based classification.  It has been found that certain materials when captured from satellites and other airborne imaging devices, exhibit texture signatures that can be useful for these purposes \cite{seaice}.
 
-Machine learning techniques have been applied to a large number of different research areas.  Their usefulness for classification and regression problems in the agricultural and environmental fields has been demonstrated for the purposes of plant disease detection and prevention, plant discrimination, levee management, etc. [18, 20, 27, 28, 29].
+Machine learning techniques have been applied to a large number of different research areas.  Their usefulness for classification and regression problems in the agricultural and environmental fields has been demonstrated for the purposes of plant disease detection and prevention, plant discrimination, levee management, etc. \cite{mississippi}, \cite{plantdiscrimination}, \cite{plantvirus}, \cite{recognitionplants}, \cite{laserplants}.
 
 As consumer drones have entered the marketplace, it has become more reasonable for smaller scale farmers to utilize these remote sensors for monitoring there fields.  Consumer off the shelf (COTS) cameras have also decreased in price, allowing for cheap installation and modification for the purpose of agricultural monitoring at different scales.
 
