--- a/Sources/Results/Results.tex
+++ b/Sources/Results/Results.tex
@@ -69,7 +69,7 @@ The specular direction of observation and incident angle at the Brewster angle c
 
 A GLCM texture analysis was also performed on each sample extracted to determine the dissimilarity, contrast, entropy, and correlation. Due to each of the GLCM features being generated from the same initial matrix, many of the features show high levels of correlation.  In general, a measure should be taken from the orderliness group, contrast group and descriptive statistics group. It has previously been shown [mayer source] that a textures dissimilarity and correlation show low levels of correlation.  Therefore, they are plotted here to represent the texture in 2 dimensions.
 
-Although these features contain information regarding the texture of a surface, it is often difficult to determine what actually causes each metric to arise when describing specific surface GLCM properties [4].
+Although these features contain information regarding the texture of a surface, it is often difficult to determine what actually causes each metric to arise when describing specific surface GLCM properties \cite{haralick}.
 
 Figure 21 shows the texture of the leaves above for the V filter orientation.  It shows that each species exhibits its own unique texture that helps to visually create clusters, and therefore should prove useful for classification.
 %
