--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1,9 +1,11 @@
-@online{Akinci,
+%1
+@online{akinci,
     author = "Akıncı, S. and Lösel, D.M",
     title = "Plant Water-Stress Response Mechanisms",
     url  = "https://www.intechopen.com/books/water-stress/plant-water-stress-response-mechanisms",
     keywords = "plant,water, stress"
 }
+%2
 @book{photonvegetation,
     title = {Photon Vegetation Interactions},
     author = {Myneni, R.B. and Ross, J.},
@@ -13,6 +15,7 @@
     publisher = {Springer-Verlag},
     keywords = {photons, vegetation, remote sensing}
 }
+%3
 @article{haralickcancer,
     author = "Zayed, N. and Elnemr, H.A.",
     title = "{Statistical Analysis of Haralick Texture Features to Discriminate Lung Abnormalities}",
@@ -24,6 +27,7 @@
     DOI = "http://dx.doi.org/10.1155/2015/267807",
     keywords = "lung, cancer, haralick"
 }
+%4
 @article{haralick,
     author = "Albert Einstein",
     title = "{Textural Features for Image Classification}",
@@ -35,6 +39,7 @@
     DOI = "https://doi.org/10.1109/TSMC.1973.4309314",
     keywords = "texture, glcm"
 }
+%5
 @book{linearcircuit,
     title = {Linear Circuits},
     author = {Scott, R.E.},
@@ -43,6 +48,7 @@
     publisher = {Addison-Wesley Educational Publishers Inc},
     keywords = {circuits, linear}
 }
+%6
 @book{maxwell,
     title = {Dynamical Theory of the Electromagnetic Field},
     author = {Maxwell, J.C.},
@@ -51,6 +57,7 @@
     publisher = {Philosophical Transactions of the Royal Society},
     keywords = {physics}
 }
+%7
 @book{chipman,
     title = {Polarimetry},
     author = {Chipman, R.},
@@ -60,6 +67,7 @@
     publisher = {McGraw-Hill Education},
     keywords = {optics, polarimetry, polarization}
 }
+%8
 @article{giakos,
     author = "Giakos, G.C.",
     title = "{Polarimetric Phenomenology of Light Interaction with Early Lung Cancer Stages}",
@@ -69,14 +77,16 @@
     year = "2011",
     keywords = "polarimetry, cancer"
 }
+%9
 @book{ecophysiology,
     title = {Handbook of Plant Ecophysiology Techniques},
     author = {Reigosa Roger, M.J.},
     isbn = {9780792370536},
     year = {2001},
-    publisher = {Springer Science & Business Media},
+    publisher = {Springer Science \& Business Media},
     keywords = {plants, ecophysiology}
 }
+%10
 @article{rwc:1,
     author = "Tanentzap, F.M. and Stempel, A. and Ryser, P.",
     title = "{Reliability of Leaf Relative Water Content (RWC) Measurements after Storage: Consequences for in situ Measurements}",
@@ -87,6 +97,7 @@
     DOI = "https://doi.org/10.1139/cjb-2015-0065",
     keywords = "botany, rwc"
 }
+%11
 @article{cuticle,
     author = "Yeats, T.H. and Rose, J.K.C.",
     title = "{The Formation and Function of Plant Cuticles}",
@@ -98,6 +109,7 @@
     DOI = "https://doi.org/10.1104/pp.113.222737",
     keywords = "wax, plant, cuticle"
 }
+%12
 @book{remotesensing,
     title = {Remote Sensing and Image Interpretation},
     author = {Lillesand, T. and Kiefer, R.W. and Chipman, J.},
@@ -106,12 +118,14 @@
     publisher = {Wiley},
     keywords = {remote sensing, imaging}
 }
+%13
 @online{harris,
     author = "Harris Geospatial Solutions",
     title = "Broadband Greenness",
     url  = "http://www.harrisgeospatial.com/docs/BroadbandGreenness.html#Visible",
     keywords = "VI, remote sensing"
 }
+%14
 @book{polarizedlight,
     title = {Polarized Light},
     author = {Goldstein, D.H.},
@@ -120,6 +134,7 @@
     publisher = {CRC Press},
     keywords = {polarization, light, optics}
 }
+%15
 @book{schott,
     title = {Fundamentals of Polarimetric Remote Sensing},
     author = {Schott, J.R.},
@@ -129,6 +144,8 @@
     publisher = {SPIE--The International Society for Optical Engineering},
     keywords = {remote sensing, polarimetry}
 }
+%16
+%TODO Add this ref
 @book{chemistry,
     title = {Chemistry the Central Science},
     author = {Brown and Lemay and Bursten and Murphy and Woodward},
@@ -138,18 +155,21 @@
     publisher = {Prentice Hall},
     keywords = {chemistry}
 }
+%17
 @online{noob,
     author = "Ericksen, N.J.",
     title = "noobElectric",
     url  = "https://github.com/nicholasericksen/noobElectric ",
     keywords = "python, optics"
 }
+%18
 @article{mississippi,
     author = "Dabbiru and Aanstoos and Ball and Younan",
     title = "{Screening Mississippi River Levees Using Texture-Based and Polarimetric-Based Features from Synthetic Aperture Radar Data}",
     year = "2017",
     keywords = "polarimetry, texture, glcm"
 }
+%19
 @article{seaice,
     author = "Soh, L.K.",
     title = "{Texture Analysis of SAR Sea Ice Imagery Using Gray Level Co-Occurrence Matrices}",
@@ -161,6 +181,7 @@
     DOI = "https://doi.org/10.1109/36.752194",
     keywords = "remote sensing, sea ice"
 }
+%20
 @article{plantdiscrimination,
     author = "Bosch, R.",
     title = "{Plant Classification System for Crop / Weed Discrimination Without Segmentation}",
@@ -169,16 +190,18 @@
     DOI = "https://doi.org/10.1109/WACV.2014.6835733",
     keywords = "crop discrimination, classification"
 }
+%21
 @article{sarag,
     author = "Karjalainen, M. and Kaartinen, H. and Hyyppä, J.",
     title = "{Agricultural Monitoring Using Envisat Alternating Polarization SAR Images}",
-    journal = "Photogrammetric Engineering & Remote Sensing",
+    journal = "Photogrammetric Engineering \& Remote Sensing",
     number = "1",
     pages = "117-126",
     year = "2008",
     DOI = "https://doi.org/10.14358/PERS.74.1.117",
     keywords = "remote sensing, agriculture"
 }
+%22
 @article{priest,
     author = "Priest, R.G. and Germer, T.A.",
     title = "{Polarimetric BRDF in the Microfacet Model: Theory and Measurements}",
@@ -186,6 +209,7 @@
     year = "2000",
     keywords = "brdf, polarimetry"
 }
+%23
 @article{pbrdf,
     author = "Renhorn, I.G.E and Hallberg, T. and Boreman, G.D.",
     title = "{Polarimetric BRDF in the Microfacet Model: Theory and Measurements}",
@@ -193,12 +217,14 @@
     year = "2015",
     keywords = "brdf, polarimetry"
 }
+%24
 @online{calgary,
     author = "Hall-Beyer, M.",
     title = "GLCM Texture: A Tutorial",
     url  = "https://prism.ucalgary.ca/handle/1880/51900",
     keywords = "glcm, texture"
 }
+%25
 @article{specularclass,
     author = "Wolff, L.B.",
     title = "{Classification Of Material Surfaces Using The Polarization Of Specular Highlights}",
@@ -208,6 +234,7 @@
     DOI = "http://dx.doi.org/10.1117/12.949046",
     keywords = "specular, polarization"
 }
+%26
 @article{grant,
     author = "Grant, L.",
     title = "{Diffuse and Specular Characteristics of Leaf Reflectance}",
@@ -219,6 +246,7 @@
     DOI = "https://doi.org/10.1016/0034-4257(87)90064-2",
     keywords = "diffuse, specular, leaf"
 }
+%27
 @article{plantvirus,
     author = "Maxwell, D.J. and Partridge, J.C. and Roberts, N.W. and Boonham, N. and Foster, G.D.",
     title = "{The Effects of Plant Virus Infection on Polarization Reflection from Leaves}",
@@ -229,6 +257,7 @@
     DOI = "https://doi.org/10.1371/journal.pone.0152836",
     keywords = "physics"
 }
+%28
 @article{recognitionplants,
     author = "Bhardwaj, A. and Kaur, M. and Kumar, A.",
     title = "{Recognition of plants by Leaf Image using Moment Invariant and Texture Analysis}",
@@ -239,6 +268,7 @@
     year = "2013",
     keywords = "texture, plants"
 }
+%29
 @article{laserplants,
     author = "Askraba, S. and Paap, A. and Alameh, K.",
     title = "{Laser-Stabilized Real-Time Plant Discrimination Sensor for Precision Agriculture}",
@@ -249,6 +279,7 @@
     DOI = "http://dx.doi.org/10.1109/JSEN.2016.2582908",
     keywords = "laser, plants, precision"
 }
+%30
 @article{specularbrdf,
     author = "Bousquet and Lacherade and Jacquemoud and Moya",
     title = "{Leaf BRDF measurements and model for specular and diffuse components differentiation}",
@@ -260,6 +291,7 @@
     DOI = "https://doi.org/10.1016/j.rse.2005.07.005",
     keywords = "leaf, brdf"
 }
+%31
 @article{vanderbilt,
     author = "Vanderbilt, V.C. and Grant, L. and Daughtry, C.S.T.",
     title = "{Polarization of Light Scattered by Vegetation}",
@@ -270,6 +302,7 @@
     DOI = "http://dx.doi.org/10.1109/PROC.1985.13232",
     keywords = "polarization, canopy, leaf"
 }
+%32
 @article{surface,
     author = "Atkinson, G.A. and Hancock, E.R.",
     title = "{Recovery of Surface Orientation from Diffuse Polarization}",
@@ -280,6 +313,7 @@
     DOI = "http://dx.doi.org/10.1109/TIP.2006.871114",
     keywords = "surface, diffuse, polarization"
 }
+%33
 @article{shapediffuse,
     author = "Atkinson, G. and Hancock, E.",
     title = "{Shape from Diffuse Polarisation}",
@@ -287,6 +321,7 @@
     DOI = "http://dx.doi.org/10.5244/C.18.94",
     keywords = "diffuse, polarization"
 }
+%34
 @book{stats,
     title = {An Introduction to Statistical Learning: with Applications in R},
     author = {James, G. and Witten, D. and Hastie, T. and Tibshirani, R.},
@@ -296,35 +331,9 @@
     publisher = {Springer},
     keywords = {statistics}
 }
+%35
 @online{pigments,
     title = "Leaf Structure and Pigments",
     url  = "http://w3.marietta.edu/~biol/introlab/Leaves%20and%20Pigments.pdf",
     keywords = "plant, pigments"
-}
-
-
-
-
-
-@book{dirac,
-    title = {The Principles of Quantum Mechanics},
-    author = {Paul Adrien Maurice Dirac},
-    isbn = {9780198520115},
-    series = {International series of monographs on physics},
-    year = {1981},
-    publisher = {Clarendon Press},
-    keywords = {physics}
-}
-
-@article{einstein,
-    author = "Albert Einstein",
-    title = "{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
-    [{On} the electrodynamics of moving bodies]",
-    journal = "Annalen der Physik",
-    volume = "322",
-    number = "10",
-    pages = "891--921",
-    year = "1905",
-    DOI = "http://dx.doi.org/10.1002/andp.19053221004",
-    keywords = "physics"
 }
