--- a/Sources/Background/Nature_of_Light/Reflection_Transmission.tex
+++ b/Sources/Background/Nature_of_Light/Reflection_Transmission.tex
@@ -42,7 +42,7 @@ The Brewster angle is a special case where the $P$ polarization state is complet
 
 %Figure 5-Transmission and reflection coefficients for air and glass. Reproduced here without permission.%
 
-The Mueller matrix formulation for reflection and transmission reduces to the form of a linear polarizer for ideal surfaces.  It has been shown in [14] that the equation for a reflected beam off of a perfectly smooth dielectric surface is
+The Mueller matrix formulation for reflection and transmission reduces to the form of a linear polarizer for ideal surfaces.  It has been shown in \cite{polarizedlight} that the equation for a reflected beam off of a perfectly smooth dielectric surface is
 %
 \begin{align}
     \begin{split}
@@ -57,19 +57,41 @@ The Mueller matrix formulation for reflection and transmission reduces to the fo
     \small
     \begin{bmatrix}
        cos^2(\theta_{-}) + cos^2(\theta_{+}) & cos^2(\theta_{-}) - cos^2(\theta_{+}) & 0 & 0 \\
-        cos^2(\theta_{-}) - cos^2(\theta_{+}) & cos^2(\theta_{-}) - cos^2(\theta_{+}) & 0 & 0 \\
+        cos^2(\theta_{-}) - cos^2(\theta_{+}) & cos^2(\theta_{-}) + cos^2(\theta_{+}) & 0 & 0 \\
         0 & 0 & -2cos(\theta_{-})cos(\theta_{+}) & 0 \\
         0 & 0 & 0 & -2cos(\theta_{-})cos(\theta_{+})
+    \end{bmatrix}
+    \begin{bmatrix}
+        S_0 \\
+        S_1 \\
+        S_2 \\
+        S_3
     \end{bmatrix}
     \end{split}
 \end{align}
 %
 where $\theta_{\pm}=\theta_i \pm \theta_r$. This is identical to the form of a linear diattenuator or polarizer.
-
+[TODO check these equations for accuracy]
 For incident unpolarized light the equation simplifies to
 %
-
+\begin{align}
+    \begin{bmatrix}
+        S_{0r} \\
+        S_{1r} \\
+        S_{2r} \\
+        S_{3r}
+    \end{bmatrix}
+    =
+    \frac{1}{2}(\frac{tan(\theta_{-})}{sin(\theta_{+})})^2
+    \begin{bmatrix}
+        cos^2(\theta_{-}) + cos^2(\theta_{+}) \\
+        cos^2(\theta_{-}) - cos^2(\theta_{+}) \\
+        0 \\
+        0
+    \end{bmatrix}
+    S_0
+\end{align}
 %
 Therefore, for ideal reflective surfaces, at the Brewster angle, light will be completely polarized perpendicular to the plane of incidence.
 
-Imperfect, non-ideal surfaces have the ability to reflect, transmit and absorb incident electromagnetic radiation.  The outcome of these interactions are related to the physiological makeup of the material, as well as its surface topology.  Multiple scattering mechanisms can be at work within a system, and numerous models have been attempted to balance the tradeoffs between practical realizability for measurements and accurate representation of scattering mechanisms [22, 23].  Only some of these models attempt to deal with the polarization of the incident, reflected, and transmitted beams.
+Imperfect, non-ideal surfaces have the ability to reflect, transmit and absorb incident electromagnetic radiation.  The outcome of these interactions are related to the physiological makeup of the material, as well as its surface topology.  Multiple scattering mechanisms can be at work within a system, and numerous models have been attempted to balance the tradeoffs between practical realizability for measurements and accurate representation of scattering mechanisms [\cite{priest}, \cite{pbrdf}].  Only some of these models attempt to deal with the polarization of the incident, reflected, and transmitted beams.
