--- a/Sources/Background/Plant_Physiology/Plant_Physiology.tex
+++ b/Sources/Background/Plant_Physiology/Plant_Physiology.tex
@@ -11,7 +11,7 @@ The layers of a deciduous leaf contain protection mechanisms, transport systems,
 
 The cuticle wax layer, upper epidermis, and mesophyll layer are the first layers of light interaction on the adaxial surface of the leaf.
 
-The cuticle wax layer provides “the most critical adaptive trait for survival … the ability to retain water in increasingly dehydrating habitats” [11].  It is the first line of defense for plants and acts as a barrier between water transpiration.
+The cuticle wax layer provides “the most critical adaptive trait for survival … the ability to retain water in increasingly dehydrating habitats” \cite{cuticle}.  It is the first line of defense for plants and acts as a barrier between water transpiration.
 
 The mesophyll layers contain chloroplasts that convert light energy into chemical energy and consists of two parts. The palisade mesophyll is made up of elongated, organized, compact cells that contain a large number of the chloroplasts.  The spongy mesophyll is irregular in shape and has a large amount of space between its cells to facilitate air and gas exchange [find source].
 
