--- a/Sources/Background/Plant_Physiology/RWC.tex
+++ b/Sources/Background/Plant_Physiology/RWC.tex
@@ -5,7 +5,7 @@ The Relative Water Content (RWC) of a leaf is a measure of the current water lev
 
 Water makes up over 90\% of the mass of a leaf, and although RWC provides a good indicator of plant health and water capacity, it is highly dependent on the age and maturity of the leaf.  It should also be taken into consideration that leaves can also be very heterogeneous and contain a variety of complex structures in different stages of growth, within each individual leaf.
 
-Correlations between the RWC and other physiological responses have been found in [9].
+Correlations between the RWC and other physiological responses have been found in \cite{ecophysiology}.
 
 \begin{table}[h]
   \centering
@@ -24,7 +24,7 @@ Correlations between the RWC and other physiological responses have been found i
   \label{tab:Packages}
 \end{table}
 
-“An increase in reflectance…is not directly related to water content but indirectly, since a decrease in water content can lead to an increase in internal lead air space or cell breakdown which may increase reflectance and decrease transmittance [2]”.
+“An increase in reflectance…is not directly related to water content but indirectly, since a decrease in water content can lead to an increase in internal lead air space or cell breakdown which may increase reflectance and decrease transmittance \cite{photonvegetation}”.
 
 This increase in internal air space leads to multiple scattering at air wax boundaries, and creates differences in the reflection and transmission of light, absorption, and the $S1$ and $S2$ Stokes parameters of the polarization response.
 
